Add content to article.

--- a/h6.md
+++ b/h6.md
@@ -28,7 +28,7 @@ I downloaded the closest version to my Linux Salt (3002.6) to my Windows (3002.8
 2. Open the installer with admin rights (ie. win + x -> Windows terminal admin -> go to your download dir and run the installer)
 
 ![Pic 1. Salt Minion  installer](pics/h6/1.png)  
-*The installed looked like this*
+*The installer looked like this*
 
 3. I specified the master as saltmaster and let the minion be as the one the installer suggested
 4. After that I tried out a version check in cmd
