--- a/h7.md
+++ b/h7.md
@@ -17,6 +17,8 @@ The source for the exercise [h7](https://terokarvinen.com/2021/configuration-man
 ![Pic 1. Django-admin ready for users](pics/h7/1.png)  
 *Django-admin console ready for logging in*
 
+Django is a web development framework that makes it easy to get things rolling fast. The process of creating a Django dev environment is a series of manual steps that I set out to automate.
+
 Finished state: https://github.com/kalletolonen/djangoadmin
 Licence for the state: GPL 2.0
 
@@ -31,4 +33,702 @@ Salt-minion installed
 You'll be able to apply the project on your own development server by copying the contents or the finished state to **/srv/salt/djangoadmin** and then running the command:
 		
 	salt-state --local state.apply djangoadmin
+
+## b) Kaikki tehtävät tähän. Listaa suora linkki kuhunkin palautukseesi h1, h2.. / List all of your homework
+
+[h1](https://github.com/kalletolonen/ConfManSystems/blob/main/h1.md)  
+[h2](https://github.com/kalletolonen/ConfManSystems/blob/main/h2.md)  
+[h3](https://github.com/kalletolonen/ConfManSystems/blob/main/h3.md)  
+[h4](https://github.com/kalletolonen/ConfManSystems/blob/main/h4.md)  
+[h5](https://github.com/kalletolonen/ConfManSystems/blob/main/h5.md)  
+[h6](https://github.com/kalletolonen/ConfManSystems/blob/main/h6.md)  
+
+## c) Oma moduli (iso tehtävä). Ratkaise jokin oikean elämän tai keksitty tarve omilla tiloilla/moduleilla. Voit käyttää Salttia tai muuta valitsemaasi modernia keskitetyn hallinnan ohjelmaa. Esitä tulos viimeisellä opetuskerralla, 5-10 min. Live demo olisi kiva. Raportoi modulisi tarkoitus, koodi ja testit.  / Make your own Salt module
+
+If you'd like to jump to the finished state, you can do so [here](https://github.com/kalletolonen/djangoadmin). 
+
+I started work @ 11.30ish.
+
+Source for the Django installation instructions: https://github.com/kalletolonen/linux_palvelimet/blob/main/tehtava6.md
+
+Original source: https://terokarvinen.com/2022/django-instant-crm-tutorial/
+
+First I cloned a new base VM with VirtualBox. My gameplan was to first install the Django-admin console manually and then automate the process step by step. So, to get things going I installed a bunch of programs.
+	
+	sudo apt-get update
+	sudo apt-get install -y micro bash-completion virtualenv
+
+After this I needed to start the create and start the  environment.
+
+	 virtualenv --system-site-packages -p python env/
+	 source env/bin/activate
+	 which pip
+
+![Pic 2. Inside VirtualEnv](pics/h7/2.png)  
+*The environment was ready for use*  
+
+After this I added django to requirements, installed it and checked for the version.
+
+	echo "django" |tee requirements.txt
+	pip install -r requirements.txt
+	django-admin --version
+
+![Pic 3. Django was installed](pics/h7/3.png)  
+*Django was installed*  
+
+The next step was to start a base project for development and run the development server.
+
+	django-admin startproject baseproject
+	cd baseproject/
+	./manage.py runserver
+
+![Pic 4. Development server was running](pics/h7/4.png)  
+*Django dev server was running*  
+
+![Pic 5. Admin-console was present](pics/h7/5.png)  
+*Admin-console was available*  
+
+To log in the admin console I needed to create a superuser.
+
+	./manage.py createsuperuser
+
+This resulted in an error message, that told me I had to do something else first.
+
+```
+    return Database.Cursor.execute(self, query, params)
+django.db.utils.OperationalError: no such table: auth_user
+```
+
+So I made database migrations for the project.
+
+	./manage.py makemigrations
+	./manage.py migrate
+	./manage.py createsuperuser
+
+I added a djangoadmin user and managed to log into the account.
+
+![Pic 6. Logged in to Django admin-console](pics/h7/6.png)  
+*Login was successfull*  
+
+I took a break @ 12.47, since this was the initial scope of my project done manually.
+
+Returned to work @ 13.05.
+
+### Installing Salt minion
+
+I didn't need salt-master for this project by default, but I installed it anyway on the same go. I opened a fesh terminal in my home direcotory and entered a command.
+
+	sudo apt-get install -y salt-master salt-minion
+	salt --version
+
+```
+kallet@confmansys:~$ salt --version
+salt 3002.6
+```
+
+### Installing Virtualenv with salt
+
+First I created a folder for my project and a helloworld for Salt in it.
+
+	sudo mkdir -p /srv/salt/djangoadmin
+	sudoedit /srv/salt/djangoadmin/init.sls
+
+
+```SaltStack
+/tmp/test:
+  file.managed
+```
+
+**Test**
+	
+	sudo salt-call --local state.apply djangoadmin
+	
+```
+After 2 times execution
+
+     Comment: File /tmp/test exists with proper permissions. No changes made.
+     Started: 13:19:25.440783
+    Duration: 5.168 ms
+     Changes:   
+
+Summary for local
+------------
+Succeeded: 1
+Failed:    0
+------------
+Total states run:     1
+Total run time:   5.168 ms
+```
+
+![Pic 7. Salt was working](pics/h7/7.png)  
+*Hello world was working*  
+
+After this I modified my state to install Virtualenv.
+	
+	sudoedit /srv/salt/djangoadmin/init.sls
+	
+	
+```SaltStack
+virtualenv:
+  pkg.installed
+```
+
+To test this, I uninstalled virtualenv (Django was inside it, so no need to uninstall it).
+
+	#In my home directory
+	rm -r env
+	sudo apt-get purge virtualenv -y
+
+I didn't have any luck with removing the Virtualenv.
+
+```
+kallet@confmansys:~$ virtualenv --version
+virtualenv 20.4.0+ds from /usr/lib/python3/dist-packages/virtualenv/__init__.py
+```
+
+So I removed the folder that --version was referring to to atleast cripple it. I couldn't find a source on how to actually remove it.
+	
+	sudo rm -r /usr/lib/python3/dist-packages/virtualenv
+
+```
+kallet@confmansys:~$ virtualenv --version
+Traceback (most recent call last):
+  File "/usr/bin/virtualenv", line 33, in <module>
+    sys.exit(load_entry_point('virtualenv==20.4.0+ds', 'console_scripts', 'virtualenv')())
+  File "/usr/bin/virtualenv", line 25, in importlib_load_entry_point
+    return next(matches).load()
+  File "/usr/lib/python3.9/importlib/metadata.py", line 77, in load
+    module = import_module(match.group('module'))
+  File "/usr/lib/python3.9/importlib/__init__.py", line 127, in import_module
+    return _bootstrap._gcd_import(name[level:], package, level)
+  File "<frozen importlib._bootstrap>", line 1030, in _gcd_import
+  File "<frozen importlib._bootstrap>", line 1007, in _find_and_load
+  File "<frozen importlib._bootstrap>", line 972, in _find_and_load_unlocked
+  File "<frozen importlib._bootstrap>", line 228, in _call_with_frames_removed
+  File "<frozen importlib._bootstrap>", line 1030, in _gcd_import
+  File "<frozen importlib._bootstrap>", line 1007, in _find_and_load
+  File "<frozen importlib._bootstrap>", line 984, in _find_and_load_unlocked
+ModuleNotFoundError: No module named 'virtualenv'
+
+```
+
+Now I didn't have Virtualenv, so I could test out my state.
+
+![Pic 8. Salt state succeeded](pics/h7/8.png)  
+*Salt installed the pkg*  
+
+Running the state a second time confirmed idempotency.
+
+	sudo salt-call --local state.apply djangoadmin
+	
+
+```
+Summary for local
+------------
+Succeeded: 1
+Failed:    0
+------------
+Total states run:     1
+Total run time:  48.364 ms
+```
+
+Now I had an issue with Virtualenv, since it didn't work anymore.
+
+```
+ModuleNotFoundError: No module named 'virtualenv'
+```
+
+Virtualenv is an [isolated copy of Python](https://www.pythonforbeginners.com/basics/how-to-use-python-virtualenv), so deleting some directories propably damaged the system quite bad.
+
+So the next thing was to install python3 again to fix this issue. I uninstalled python3 and added it to my state.
+
+	sudo apt-get purge -y python3
+
+Python 3 was still installed and happy, so I tried to delete some more. It's confusing that removing a program is such a ridiculous thing - why would you need to remove everything named python3(something) to remove it?
+	
+	sudo apt-get purge -y  python3*
+
+```
+kallet@confmansys:~$ python3
+bash: /usr/bin/python3: No such file or directory
+```
+	
+	sudoedit /srv/salt/djangoadmin/init.sls
+	
+
+```SaltStack
+virtualenv:
+  pkg.installed
+
+python3:
+  pkg.installed
+```
+
+	sudo salt-call --local state.apply djangoadmin
+
+This resulted in an error with Salt, since salt uses Python.
+
+```
+sudo: salt-call: command not found
+```
+
+So I installed python3 and salt manually and tried again.
+	
+	sudo apt-get install -y python3 salt-master salt-minion
+	sudo salt-call --local state.apply djangoadmin
+
+```
+After 2 runs 
+
+Summary for local
+------------
+Succeeded: 2
+Failed:    0
+------------
+Total states run:     2
+Total run time:  55.668 ms
+```
+
+I took a break @ 13.56.
+
+Returned to work @ 18.23.
+	
+### Setting system site pkg's with Virtualenv
+
+I decided to try out making the command to set up system site packages (that allows the environment to use the Python pkg's in /lib/site-packages) by checking that a folder had been created and it has the same pkg's as the operating system. My VM did not start up anymore, so removing and installing Python with my earlier method might not be a great idea. I made a new VM clone and started over.
+
+	sudo apt-get update
+	sudo apt-get install -y salt-master salt-minion bash-completion micro
+	export EDITOR=micro
+	sudo mkdir -p /srv/salt/djangoadmin
+	sudoedit /srv/salt/djangoadmin/init.sls
+
+
+```SaltStack
+virtualenv:
+  pkg.installed
+```
+	
+	sudo salt-call --local state.apply djangoadmin
+
+```
+#After 2nd run
+
+Summary for local
+------------
+Succeeded: 1
+Failed:    0
+------------
+Total states run:     1
+Total run time:  49.776 ms
+```
+
+The state worked, so next it was time to create the environment with system site pkg's.
+	
+	sudoedit /srv/salt/djangoadmin/init.sls
+
+```SaltStack
+virtualenv:
+  pkg.installed
+
+virtualenv --system-site-packages -p python3 env/:
+  cmd.run
+```
+
+	sudo salt-call --local state.apply djangoadmin
+
+That did create the environment, but the state wasn't idempotent.
+
+```
+#After 2nd run
+
+Summary for local
+------------
+Succeeded: 2 (changed=1)
+Failed:    0
+------------
+Total states run:     2
+Total run time: 202.991 ms
+```
+
+ls did actually prove, that it did not work at all, eventhough the stdout suggested it did.
+	
+	ls
+
+![Pic 9. Salt state succeeded, but didn't](pics/h7/9.png)  
+*The outcome wasn't as expected*  
+
+To debug this, I changed the targer folder in the state and checked the status with ls.
+
+	sudoedit /srv/salt/djangoadmin/init.sls
+
+```SaltStack
+virtualenv:
+  pkg.installed
+
+virtualenv --system-site-packages -p python3 env1/:
+  cmd.run
+```
+	
+	sudo salt-call --local state.apply djangoadmin
+	ls
+
+That had the same outcome as earlier. So then I tried it out just on the CLI. The CLI command worked like a charm, so then I tried to modify the state to see if I knew how to make cmd.run states.
+
+```SaltStack
+#init.sls
+
+virtualenv:
+  pkg.installed
+
+echo "foo":
+  cmd.run
+```
+
+That worked.
+
+```
+Summary for local
+------------
+Succeeded: 2 (changed=1)
+Failed:    0
+------------
+Total states run:     2
+Total run time:  65.611 ms
+```
+
+My situation was that I knew how to make cmd.run states, but the outcome wasn't as expected, eventhough the stdout suggested it was. So, next I tried to create a directory with a CLI-command as cmd.run.
+
+```SaltStack
+virtualenv:
+  pkg.installed
+
+mkdir foo:
+  cmd.run
+```
+
+The stdout suggested that the command ran, but ls proved that the outcome wasn't a directory. Next step was Googling with "Why doesn't cmd.run allow mkdir in salt state". That didn't yield much, but I realized that Salt had probably been creating the folders in somewhere else, ie. the Salt directory. I checked that, but no luck. I decided to check the whole system and searched for [a command](https://www.cyberciti.biz/faq/howto-find-a-directory-linux-command/) to do so.
+
+	cd /
+	sudo find / -type d -name "env1" |grep lib
+
+That didn't help. I executed my state again and now the error msg was helpfull.
+
+```
+----------
+          ID: mkdir foo
+    Function: cmd.run
+      Result: False
+     Comment: Command "mkdir foo" run
+     Started: 19:10:53.195338
+    Duration: 5.571 ms
+     Changes:   
+              ----------
+              pid:
+                  26062
+              retcode:
+                  1
+              stderr:
+                  mkdir: cannot create directory 'foo': File exists
+              stdout:
+
+Summary for local
+------------
+Succeeded: 1 (changed=1)
+Failed:    1
+```
+
+I had created the folder under root.
+
+```
+kallet@confmansys:/$ sudo find / -type d -name "foo"
+/root/foo
+find: ‘/run/user/1000/doc’: Permission denied
+```
+
+I googled "how to create a directory in the current user's home directory" and got [a good hint](https://serverfault.com/questions/915600/saltstack-how-to-create-user-and-a-directory-in-his-home-directory) on how I should mod my state.
+
+```SaltStack
+virtualenv:
+  pkg.installed
+
+currentuser:
+  user.present
+
+make_env_directory:
+  file.directory:
+    - name: ~currentuser/foo
+```
+
+That created a /home/currentuser/foo directory. I clearly needed some programming to get things done and I remembered Jinja: https://terokarvinen.com/2018/04/10/make-a-million-of-those-jinja-templating-salt-states/?fromSearch=salt
+
+Somehow that rabbit hole and googling about Jinja led me to find out that Virtualenv has [a dedicated function](https://docs.saltproject.io/en/latest/ref/states/all/salt.states.virtualenv_mod.html) in Salt.
+
+The source suggested creating the env in /var/www/ which is a location I could live with.
+
+```SaltStack
+#init.sls
+
+virtualenv:
+  pkg.installed
+
+/var/www/env:
+  virtualenv.managed:
+    - system_site_packages: True 
+```
+
+That seemed to work.
+
+```
+#After 2nd run
+
+----------
+          ID: /var/www/env
+    Function: virtualenv.managed
+      Result: True
+     Comment: virtualenv exists
+     Started: 20:06:20.206772
+    Duration: 0.884 ms
+     Changes:   
+
+Summary for local
+------------
+Succeeded: 2
+Failed:    0
+------------
+Total states run:     2
+Total run time:  49.150 ms
+```
+
+To be sure, I checked my location for the env.
+
+![Pic 10. Virtual env was where it was supposed to be](pics/h7/10.png)  
+*env-folder existed with lib*  
+
+### Installing Django in Virtualenv
+
+The documentation hinted at the fact that I could have a requirements.txt in my salt-server's file location, so I added those lines to my state and a requirements.txt to /srv/salt/djangoadmin/
+
+	sudoedit /srv/salt/djangoadmin/requirements.txt
+	#wrote django and saved
+	sudoedit /srv/salt/djangoadmin/init.sls
+
+```SaltStack
+virtualenv:
+  pkg.installed
+
+/var/www/env:
+  virtualenv.managed:
+    - system_site_packages: True
+    - requirements: salt://djangoadmin/requirements.txt
+```
+
+That worked!
+
+```
+#After 2nd run
+
+----------
+          ID: /var/www/env
+    Function: virtualenv.managed
+      Result: True
+     Comment: virtualenv exists
+     Started: 20:18:26.759762
+    Duration: 3776.694 ms
+     Changes:   
+
+Summary for local
+------------
+Succeeded: 2
+Failed:    0
+------------
+Total states run:     2
+Total run time:   3.824 s
+```
+
+I wanted to see if I could activate the environment and run server manually at this point, so I did just that.
+
+	source /var/www/env/bin/activate
+
+```
+(env) kallet@confmansys:/$ django-admin --version
+4.0.4
+(env) kallet@confmansys:/$ deactivate
+kallet@confmansys:/$ django-admin --version
+bash: django-admin: command not found
+```
+
+I realized that I was having the the same problem again - where should my state create a project (so that it wouldn't require an absolute path with my user name)? While googling this I noticed, that Salt had a [dedicated Django module](https://docs.saltproject.io/en/latest/ref/modules/all/salt.modules.djangomod.html) as well, so that might be usefull down the line. 
+
+Another [source](https://www.barrymorrison.com/2013/Mar/11/deploying-django-with-salt-stack/) had done a similar project in 2013.
+
+Next I decided to create a dedicated django user and try running the env as the user.
+
+```
+#init.sls
+
+djangouser:
+  user.present:
+    - fullname: Django User
+    - home: /home/djangouser
+
+virtualenv:
+  pkg.installed
+
+/home/djangouser/env:
+  virtualenv.managed:
+    - system_site_packages: True
+    - requirements: salt://djangoadmin/requirements.txt
+```
+
+That worked, but the user didn't have a strong password. I decided to look into it if I would have enough time in the end.
+
+```
+#After 2nd run
+
+Summary for local
+------------
+Succeeded: 3
+Failed:    0
+------------
+Total states run:     3
+Total run time:   3.824 s
+```
+
+So, now I had a home directory with an environment.
+
+![Pic 11. Virtual env was where it was supposed to be, again](pics/h7/11.png)  
+*env-folder existed and pip was in the right place*  
+
+I added a version parameter to my requirements.txt.
+
+```
+django==4.0.4
+```
+
+This addition made sure that I had the correct version of Django (one that I knew would work).
+
+### Starting a Django project in Virtualenv
+
+I didn't have a clue on how to do this. So I did what was reasonable, I searched with a dozen terms and still had nothing. Sources I used:
+https://www.barrymorrison.com/2013/Mar/11/deploying-django-with-salt-stack/  
+https://docs.saltproject.io/en/latest/ref/modules/all/salt.modules.djangomod.html  
+https://docs.saltproject.io/en/latest/ref/states/all/salt.states.virtualenv_mod.html  
+
+My new init.sls. I obviously had many issues.
+
+```SaltStack
+#init.sls
+
+djangouser:
+  user.present:
+    - fullname: Django User
+    - home: /home/djangouser
+
+virtualenv:
+  pkg.installed
+
+/home/djangouser/env:
+  virtualenv.managed:
+    - system_site_packages: True
+    - requirements: salt://djangoadmin/requirements.txt
+
+/home/djangouser/baseproject:
+  file.directory:
+    - user: djangouser
+
+create Django project:
+    cmd.run:
+        - user: djangouser
+        - name: source /home/djangouser/env/bin/activate && django-admin.py startproject baseproject
+        - cwd: /home/djangouser/baseproject/
+
+```
+
+That did not work.
+
+```
+----------
+          ID: create Django project
+    Function: cmd.run
+        Name: source /home/djangouser/env/bin/activate && django-admin.py startproject baseproject
+      Result: False
+     Comment: Command "source /home/djangouser/env/bin/activate && django-admin.py startproject baseproject" run
+     Started: 22:12:56.660411
+    Duration: 7.267 ms
+     Changes:   
+              ----------
+              pid:
+                  28943
+              retcode:
+                  127
+              stderr:
+                  /bin/bash: line 1: django-admin.py: command not found
+              stdout:
+
+Summary for local
+------------
+Succeeded: 4 (changed=2)
+Failed:    1
+```
+
+The error told me that the Virtual Environment wasn't propably working. The state produced Django errors too, so I wasn't completely off.
+
+```
+[ERROR   ] Command 'source' failed with return code: 127
+[ERROR   ] stderr: /bin/bash: line 1: django-admin.py: command not found
+```
+
+So after a lot of trial and error I had a non-idempotent state that successfully checked the Django version (ie. executed inside an environment.
+
+```SaltStack
+djangouser:
+  user.present:
+    - fullname: Django User
+    - home: /home/djangouser
+
+virtualenv:
+  pkg.installed
+
+/home/djangouser/env:
+  virtualenv.managed:
+    - system_site_packages: True
+    - requirements: salt://djangoadmin/requirements.txt
+
+/home/djangouser/baseproject:
+  file.directory:
+    - user: djangouser
+
+create Django project:
+    cmd.run:
+        - user: djangouser
+        - name: "source /home/djangouser/env/bin/activate && django-admin --version"
+        - cwd: /home/djangouser/env/
+        - require:
+          - virtualenv: /home/djangouser/env
+```
+
+This was a good spot to call it a night. I quit @ 22.53.
+
+### Making migrations in the Django project
+
+### Creating a superuser for the project
+	
+	
+
+
+
+
+
+	
+
+### Automating the superuser creation
+
+Source: https://vuyisile.com/how-to-automate-creating-a-django-super-user/
+
+
+	
+	
+
+
 	
