--- a/h7.md
+++ b/h7.md
@@ -293,7 +293,7 @@ I took a break @ 13.56.
 
 Returned to work @ 18.23.
 	
-### Setting system site pkg's with Virtualenv
+### Setting system site pkg's with Virtualenv and creating the project
 
 I decided to try out making the command to set up system site packages (that allows the environment to use the Python pkg's in /lib/site-packages) by checking that a folder had been created and it has the same pkg's as the operating system. My VM did not start up anymore, so removing and installing Python with my earlier method might not be a great idea. I made a new VM clone and started over.
 
@@ -682,6 +682,8 @@ The error told me that the Virtual Environment wasn't propably working. The stat
 So after a lot of trial and error I had a non-idempotent state that successfully checked the Django version (ie. executed inside an environment.
 
 ```SaltStack
+#init.sls
+
 djangouser:
   user.present:
     - fullname: Django User
@@ -710,7 +712,280 @@ create Django project:
 
 This was a good spot to call it a night. I quit @ 22.53.
 
+Back to work the next day @ 11.56.
+
+```SaltStack
+#init.sls
+
+djangouser:
+  user.present:
+    - fullname: Django User
+    - home: /home/djangouser
+
+virtualenv:
+  pkg.installed
+
+/home/djangouser/env:
+  virtualenv.managed:
+    - system_site_packages: True
+    - requirements: salt://djangoadmin/requirements.txt
+
+/home/djangouser/baseproject:
+  file.directory:
+    - user: djangouser
+
+create Django project:
+    cmd.run:
+        - user: djangouser
+        - name: "source /home/djangouser/env/bin/activate && django-admin startproject baseproject"
+        - cwd: /home/djangouser/baseproject
+        - require:
+          - virtualenv: /home/djangouser/env
+```
+
+My modded state created the project, but not idempotently, as it was just a simple cmd.run.
+
+![Pic 12. Created a project](pics/h7/12.png)  
+*Created a project with Salt*  
+
+The state did create a project, but failed (obviously) on the 2nd run.
+
+```
+#2nd run
+
+----------
+          ID: create Django project
+    Function: cmd.run
+        Name: source /home/djangouser/env/bin/activate && django-admin startproject baseproject
+      Result: False
+     Comment: Command "source /home/djangouser/env/bin/activate && django-admin startproject baseproject" run
+     Started: 12:02:45.146550
+    Duration: 108.929 ms
+     Changes:   
+              ----------
+              pid:
+                  30725
+              retcode:
+                  1
+              stderr:
+                  CommandError: '/home/djangouser/baseproject/baseproject' already exists
+              stdout:
+
+Summary for local
+------------
+Succeeded: 4 (changed=1)
+Failed:    1
+------------
+Total states run:     5
+Total run time:   3.991 s
+```
+
+I decided that a good wasy to make this idempotent was to simply check for the folder's existance. I also noticed that I had the project structure a bit wonky, as I had 3 baseproject-folders.
+
+	sudo rm -r baseproject
+
+```SaltStack
+#init.sls
+
+djangouser:
+  user.present:
+    - fullname: Django User
+    - home: /home/djangouser
+
+virtualenv:
+  pkg.installed
+
+/home/djangouser/env:
+  virtualenv.managed:
+    - system_site_packages: True
+    - requirements: salt://djangoadmin/requirements.txt
+
+#/home/djangouser/baseproject:
+#  file.directory:
+#    - user: djangouser
+
+create Django project:
+    cmd.run:
+        - user: djangouser
+        - name: "source /home/djangouser/env/bin/activate && django-admin startproject baseproject"
+        - cwd: /home/djangouser/
+        - require:
+          - virtualenv: /home/djangouser/env
+```
+
+I tried my new state out. This time it worked like a charm! I also noticed a bug in Micro. When you have 2 terminal windows open and save your existing file, it doesn't actually save the file. I executed my state from another terminal and it executed the old state, eventhought I had saved it on the other terminal in Micro (and left the editor open).
+
+![Pic 13. Proper directory structure](pics/h7/13.png)  
+*Tree showed that now I had a proper directory structure*  
+
+Next I tried to make the command idempotent. I did a ton of trial and error, which I will not document in great detail. [A source](https://bencane.com/2013/09/23/remote-command-execution-with-saltstack/) that made me understand how to use the unless-parameter was helpfull. I also needed help with the [test command](https://www.cyberciti.biz/tips/find-out-if-file-exists-with-conditional-expressions.html). I made my state a bit leaner, since half of my state wasn't doing anything - I figured this out by commenting all the lines out individually until something made a difference.
+
+```SaltStack
+#init.sls
+
+djangouser:
+  user.present:
+    - fullname: Django User
+    - home: /home/djangouser
+
+virtualenv:
+  pkg.installed
+
+/home/djangouser/env:
+  virtualenv.managed:
+    - system_site_packages: True
+    - requirements: salt://djangoadmin/requirements.txt
+
+source /home/djangouser/env/bin/activate && django-admin startproject baseproject:
+  cmd.run:
+    - unless: test -d /home/djangouser/baseproject
+    - cwd: /home/djangouser/
+```
+
+So now I had an idempotent state that would create a Django project named "baseproject". I took a break @ 13.50.
+
+Back to business @ 16.37.
+
+### Starting the development server
+
+I started my experimenting by adding 1 more cmd.run to my state.
+
+```SaltStack
+#init.sls
+
+djangouser:
+  user.present:
+    - fullname: Django User
+    - home: /home/djangouser
+
+virtualenv:
+  pkg.installed
+
+/home/djangouser/env:
+  virtualenv.managed:
+    - system_site_packages: True
+    - requirements: salt://djangoadmin/requirements.txt
+
+source /home/djangouser/env/bin/activate && django-admin startproject baseproject:
+  cmd.run:
+    - unless: test -d /home/djangouser/baseproject
+    - cwd: /home/djangouser/
+
+./manage.py runserver:
+  cmd.run:
+    - cwd: /home/djangouser/baseproject/
+
+```
+
+A simple cmd.run didn't do the trick.
+
+```
+----------
+          ID: ./manage.py runserver
+    Function: cmd.run
+      Result: False
+     Comment: Command "./manage.py runserver" run
+     Started: 16:42:28.253638
+    Duration: 17.381 ms
+     Changes:   
+              ----------
+              pid:
+                  36060
+              retcode:
+                  127
+              stderr:
+                  /usr/bin/env: 'python': No such file or directory
+              stdout:
+
+Summary for local
+------------
+Succeeded: 4 (changed=1)
+Failed:    1
+```
+
+I realized that the earlier env-activation would have been ended before the next command, so I just added that to a new command.
+
+```SaltStack
+djangouser:
+  user.present:
+    - fullname: Django User
+    - home: /home/djangouser
+
+virtualenv:
+  pkg.installed
+
+/home/djangouser/env:
+  virtualenv.managed:
+    - system_site_packages: True
+    - requirements: salt://djangoadmin/requirements.txt
+
+source /home/djangouser/env/bin/activate && django-admin startproject baseproject:
+  cmd.run:
+    - unless: test -d /home/djangouser/baseproject
+    - cwd: /home/djangouser/
+
+source /home/djangouser/env/bin/activate && ./manage.py runserver:
+  cmd.run:
+    - cwd: /home/djangouser/baseproject/
+
+```
+![Pic 14. Django up and running](pics/h7/14.png)  
+*Django was running @ localhost*  
+
+On a second thought, this wasn't actually helpfull, since I didn't have the debug-tools of the development server at my use (Salt was just executing endlessly (ie. running the server)). On this note I omitted this command from my state and opted to do the migrations instead.
+
 ### Making migrations in the Django project
+
+I made the migration idempotent in a queer way, by examing the output of the command. In other words, the migrations are made no matter what, but only reported if there was something to actually migrate.
+
+```SaltStack
+djangouser:
+  user.present:
+    - fullname: Django User
+    - home: /home/djangouser
+
+virtualenv:
+  pkg.installed
+
+/home/djangouser/env:
+  virtualenv.managed:
+    - system_site_packages: True
+    - requirements: salt://djangoadmin/requirements.txt
+
+source /home/djangouser/env/bin/activate && django-admin startproject baseproject:
+  cmd.run:
+    - unless: test -d /home/djangouser/baseproject
+    - cwd: /home/djangouser/
+
+source /home/djangouser/env/bin/activate && ./manage.py migrate && ./manage.py makemigrations:
+  cmd.run:
+    - unless: source /home/djangouser/env/bin/activate && ./manage.py migrate | grep "No migrations to apply"
+    - cwd: /home/djangouser/baseproject/
+```
+
+After running the state 2 times I had an idempotent state with migrations.
+
+```
+#After 2nd run
+
+Summary for local
+------------
+Succeeded: 5
+Failed:    0
+------------
+Total states run:     5
+Total run time:   4.597 s
+```
+
+To check out my results on a concrete manner, I navigated to my project and started the dev server.
+
+	cd /home/djangouser
+	source env/bin/activate
+	cd baseproject
+	./manage.py runserver
+
+![Pic 15. Admin console was present](pics/h7/15.png)  
+*Django had the admin console*  
 
 ### Creating a superuser for the project
 	
@@ -724,11 +999,116 @@ This was a good spot to call it a night. I quit @ 22.53.
 
 ### Automating the superuser creation
 
-Source: https://vuyisile.com/how-to-automate-creating-a-django-super-user/
+Django does have a CLI-command to create a superuser without user input, so I decided to try it out. My main problem was that ./manage.py was producing not producing stdout. It was printing stderr instead and, to my knowledge, you can't use grep on that. Django does not allow setting a superuser from CLI with a password without human input(0), so I googled for a workaround (1,2).
 
+Source 0: https://vuyisile.com/how-to-automate-creating-a-django-super-user/
+Source 1: https://code.djangoproject.com/ticket/27769
+Source 2: https://unix.stackexchange.com/questions/117467/how-to-permanently-set-environmental-variables
 
+I added a line to my bash.bashrc.
+
+	sudo micro /etc/bash.bashrc
+
+```
+export DJANGO_SUPERUSER_PASSWORD=testpass1234
+```
+
+After that I deleted the Django project and ran my state again. To my amazement, the username persisted.
+
+```
+---------
+          ID: source /home/djangouser/env/bin/activate && ./manage.py createsuperuser --noinput --username djangouser --email test@best.com
+    Function: cmd.run
+      Result: False
+     Comment: Command "source /home/djangouser/env/bin/activate && ./manage.py createsuperuser --noinput --username djangouser --email test@best.com" run
+     Started: 18:47:09.600623
+    Duration: 494.704 ms
+     Changes:   
+              ----------
+              pid:
+                  39869
+              retcode:
+                  1
+              stderr:
+                  CommandError: Error: That username is already taken.
+              stdout:
+
+Summary for local
+------------
+Succeeded: 5 (changed=1)
+Failed:    1
+------------
+Total states run:     6
+Total run time:   5.116 s
+```
+
+I decided to try out manual user creation and see if that would produce same results.
 	
-	
+	cd /home/djangouser/
+	source env/bin/activate
+	cd baseproject/
+	./manage.py createsuperuser
 
+That resulted in an unexpected error.
 
+```
+django.db.utils.OperationalError: attempt to write a readonly database
+```
 	
+Salt had ran as root and thus everything had only writing access for root.
+
+```
+(env) kallet@confmansys:/home/djangouser/baseproject$ ls -l
+total 136
+drwxr-xr-x 3 root root   4096 14. 5. 18:43 baseproject
+-rw-r--r-- 1 root root 131072 14. 5. 18:43 db.sqlite3
+-rwxr-xr-x 1 root root    667 14. 5. 18:43 manage.py
+```
+
+I took a break @ 18.52.
+
+Returned to work @ 19.44.
+
+I decided that I would not add a superuser automatically, as that would be a security risk, as it would mean using a standard password for the said superuser. The user rights would need to be addressed. 
+
+I referred to [this post](https://stackoverflow.com/questions/42509578/saltstack-change-file-permissions) as a source for how to do that.
+
+```SaltStack
+djangouser:
+  user.present:
+    - fullname: Django User
+    - home: /home/djangouser
+
+virtualenv:
+  pkg.installed
+
+/home/djangouser/env:
+  virtualenv.managed:
+    - system_site_packages: True
+    - requirements: salt://djangoadmin/requirements.txt
+
+source /home/djangouser/env/bin/activate && django-admin startproject baseproject:
+  cmd.run:
+    - unless: test -d /home/djangouser/baseproject
+    - cwd: /home/djangouser/
+
+source /home/djangouser/env/bin/activate && ./manage.py migrate && ./manage.py makemigrations:
+  cmd.run:
+    - unless: source /home/djangouser/env/bin/activate && ./manage.py migrate | grep "No migrations to apply"
+    - cwd: /home/djangouser/baseproject/
+
+/home/djangouser:
+  file.directory:
+    - user: djangouser
+    - group: djangouser
+    - dir_mode: 755
+    - file_mode: 755
+    - follow_symlinks: True
+    - recurse:
+      - user
+      - group
+      - mode
+```
+
+I tested it out and had similar results, ie. still the wrong user. I was running the environment as kallet, my user, so that would explain that. I had to take time off to think about this and what I should do, so I quit @ 20.22.
+		
